# RestaurantAgent

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  utils.py
app/core/: __init__.py  agent.py  engine.py  interfaces.py  models.py
app/services/: ai_reasoner.py  fraud_detector.py  llm_fraud_detector.py  local_ai_reasoner.py  preference_store.py  scoring.py
app/sources/: __init__.py  foursquare_source.py  google_places_source.py  local_sample.py  yelp_source.py
data/: preferences.json
scripts/: restaurant_cli.py  run_demo.py  run_tests.py
tests/: test_agent.py  test_ai_reasoner_mock.py  test_api_with_mock_ai.py  test_engine.py  test_llm_fraud_detector.py
